@@ -26,6 +26,8 @@ LanguageTool Change Log
      needed at least two example sentences.
     -'example' element: type="incorrect" is now optional if there's a 'correction'
      attribute. The 'correction' attribute implies that the sentence is incorrect.
+    -'example' element: type="correct" is now optional. No 'type' attribute and
+     no 'correction' attribute implies that the sentence is correct.
 
 -Internal:
     -We have switched from Apache Tika to language-detector
